added output boxes and resolved concurrent errors