@@ -4,6 +4,8 @@ import javax.swing.*;
 import java.awt.*;
 import java.util.*;
 import java.util.List;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 import io.reactivex.rxjava3.schedulers.Schedulers;
 
@@ -18,14 +20,16 @@ public class DependencyAnalyserGUI {
   int PACKAGES_PER_LINE = 3;
 
   private JFrame frame;
-  private JButton startButton;
   private JTextField folderPathField;
   private JPanel graphPanel;
-  private Map<String, Map<String, List<String>>> packClassDeps;
+  private JTextField classCountField;
+  private JTextField dependencyCountField;
+  ConcurrentHashMap<String, ConcurrentHashMap<String, CopyOnWriteArrayList<String>>> packClassDeps = new ConcurrentHashMap<>();
   private Map<String, Object> packageVertexMap;
   private Map<String, Object> classVertexMap;
   private Map<String, Map<String, Object>> edgeVertexMap;
   private mxGraph graph = new mxGraph();
+  private int analysedClassesCounter;
 
   public static void main(String[] args) {
     new DependencyAnalyserGUI().createAndShowGUI();
@@ -36,25 +40,6 @@ public class DependencyAnalyserGUI {
     frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
     frame.setLayout(new BorderLayout());
 
-//    JPanel topPanel = new JPanel(new BorderLayout());
-//    folderPathField = new JTextField("test-src");
-//    JButton browseButton = new JButton("Browse");
-//    browseButton.addActionListener(e -> selectFolder());
-//    topPanel.add(folderPathField, BorderLayout.CENTER);
-//    topPanel.add(browseButton, BorderLayout.EAST);
-//
-//    startButton = new JButton("Start Analysis");
-//    startButton.addActionListener(e -> startAnalysis());
-//
-//    graphPanel = new JPanel(new BorderLayout());
-//    graphPanel.setBorder(BorderFactory.createTitledBorder("Dependency Graph"));
-//
-//    JPanel controlPanel = new JPanel(new BorderLayout());
-//    controlPanel.add(topPanel, BorderLayout.NORTH);
-//    controlPanel.add(startButton, BorderLayout.CENTER);
-//
-//    frame.add(controlPanel, BorderLayout.WEST);
-//    frame.add(graphPanel, BorderLayout.CENTER);
     JPanel controlPanel = new JPanel(new BorderLayout());
 
     JPanel topRowPanel = new JPanel(new BorderLayout());
@@ -78,6 +63,22 @@ public class DependencyAnalyserGUI {
     graphPanel = new JPanel(new BorderLayout());
     graphPanel.setBorder(BorderFactory.createTitledBorder("Dependency Graph"));
 
+    JPanel bottomPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+
+    classCountField = new JTextField("Classes/Interfaces: 0");
+    classCountField.setEditable(false);
+    classCountField.setPreferredSize(new Dimension(200, 30));
+
+    dependencyCountField = new JTextField("Dependencies: 0");
+    dependencyCountField.setEditable(false);
+    dependencyCountField.setPreferredSize(new Dimension(200, 30));
+
+    bottomPanel.add(classCountField);
+    bottomPanel.add(dependencyCountField);
+
+    frame.add(bottomPanel, BorderLayout.SOUTH);
+
+
     frame.add(controlPanel, BorderLayout.NORTH);
     frame.add(graphPanel, BorderLayout.CENTER);
 
@@ -97,7 +98,7 @@ public class DependencyAnalyserGUI {
   }
 
   private void startAnalysis() {
-    packClassDeps = new HashMap<>();
+    packClassDeps = new ConcurrentHashMap<>();
     packageVertexMap = new HashMap<>();
     classVertexMap = new HashMap<>();
     edgeVertexMap = new HashMap<>();
@@ -107,6 +108,7 @@ public class DependencyAnalyserGUI {
     graph.setAllowDanglingEdges(false);
     graph.setCellsResizable(false);
     String folderPath = folderPathField.getText();
+    analysedClassesCounter = 0;
 
     graphPanel.removeAll();
     graphPanel.revalidate();
@@ -137,7 +139,6 @@ public class DependencyAnalyserGUI {
 
   private void drawClass(Object parent, String className, int classCounter) {
     int classNameWidth = Math.max(60, className.length() * 7 + 20);
-//    int classCounter = (int) totalClass.stream().filter(classVertexMap::containsKey).count();
 
     Object classVertex = graph.insertVertex(
       parent, null, className,
@@ -147,18 +148,16 @@ public class DependencyAnalyserGUI {
     classVertexMap.put(className, classVertex);
   }
 
-  private void updateGraph(final Map<String, Map<String, List<String>>> packClassDeps) {
+  private void updateGraph(final Map<String, Map<String, List<String>>> packClassDeps, final int analysedClassesCounter) {
     try {
       Object parent = graph.getDefaultParent();
       graph.getModel().beginUpdate();
 
-      //Disegno i package nuovi
       packClassDeps.keySet()
         .stream()
         .filter(packageName -> !packageVertexMap.containsKey(packageName))
         .forEach( packageName -> drawPackage(parent, packageName));
 
-      //Disegno le nuove classi
       for (var p : packClassDeps.entrySet()) {
         String packageName = p.getKey();
         Set<String> totalClass = p.getValue().keySet();
@@ -173,7 +172,6 @@ public class DependencyAnalyserGUI {
         }
       }
 
-      //Disegno le nuove dependency
       for (var p : packClassDeps.entrySet()) {
         String packageName = p.getKey();
         Set<String> totalClass = p.getValue().keySet();
@@ -182,7 +180,6 @@ public class DependencyAnalyserGUI {
           String className = c.getKey();
           Object fromVertex = classVertexMap.get(className);
           if (fromVertex == null) {
-            //Create the class vertex if not present
             System.out.println("Class " + className + " not found. Creating");
             int classCounter = (int) totalClass.stream().filter(classVertexMap::containsKey).count();
             drawClass(packageVertexMap.get(packageName), className, classCounter);
@@ -203,8 +200,6 @@ public class DependencyAnalyserGUI {
             if (toVertex != null) {
               Object edgeVertex = graph.insertEdge(parent, null, "", fromVertex, toVertex);
               edgeVertexMap.get(className).put(to, edgeVertex);
-            } else {
-              System.out.println("to not found");
             }
           }
         }
@@ -215,74 +210,89 @@ public class DependencyAnalyserGUI {
       graphPanel.revalidate();
       graphPanel.repaint();
     } finally {
+      int totalDeps = edgeVertexMap.values().stream().mapToInt(Map::size).sum();
+
+      classCountField.setText("Classes/Interfaces: " + analysedClassesCounter);
+      dependencyCountField.setText("Dependencies: " + totalDeps);
       graph.getModel().endUpdate();
     }
 
   }
 
   private void updatePackage(PackageDepsReport packageDepsReport) {
-    final Map<String, List<String>> packageMap = new HashMap<>();
-    if (packClassDeps.containsKey(packageDepsReport.getName())) {
-      packageMap.putAll(packClassDeps.get(packageDepsReport.getName()));
-    }
-    packClassDeps.put(packageDepsReport.getName(), packageMap);
+    final ConcurrentHashMap<String, CopyOnWriteArrayList<String>> packageMap =
+      packClassDeps.computeIfAbsent(packageDepsReport.getName(), k -> new ConcurrentHashMap<>());
 
-    packageDepsReport.getElements().subscribeOn(Schedulers.io())
+    packageDepsReport.getElements()
+      .subscribeOn(Schedulers.io())
+      .observeOn(Schedulers.single())
       .subscribe(
-        classDepsReport -> updateClass(classDepsReport, packageMap),
-        error -> JOptionPane.showMessageDialog(frame, "Error: " + error));
-    var temp = deepImmutableCopy(this.packClassDeps);
-    SwingUtilities.invokeLater(() -> this.updateGraph(temp));
+        classDepsReport -> {
+          updateClass(classDepsReport, packageMap);
+          var packClassDepsCopy = deepImmutableCopy(this.packClassDeps);
+          var temp = analysedClassesCounter;
+          SwingUtilities.invokeLater(() -> this.updateGraph(packClassDepsCopy, temp));
+        },
+        error -> SwingUtilities.invokeLater(() ->
+          JOptionPane.showMessageDialog(frame, "Error: " + error))
+      );
   }
 
-  private void updateClass(ClassDepsReport classDepsReport, Map<String, List<String>> packageMap) {
-    final List<String> deps = new ArrayList<>();
-    if (packageMap.containsKey(classDepsReport.getName())) {
-      deps.addAll(packageMap.get(classDepsReport.getName()));
-    }
-    packageMap.put(classDepsReport.getName(), deps);
+  private void updateClass(ClassDepsReport classDepsReport,
+                           ConcurrentHashMap<String, CopyOnWriteArrayList<String>> packageMap) {
+    analysedClassesCounter++;
+    CopyOnWriteArrayList<String> deps = packageMap.computeIfAbsent(classDepsReport.getName(), k -> new CopyOnWriteArrayList<>());
 
-    classDepsReport.getElements().subscribeOn(Schedulers.io())
+    classDepsReport.getElements()
+      .subscribeOn(Schedulers.io())
+      .observeOn(Schedulers.single())
       .subscribe(
-        dep -> updateDependency(dep, deps),
-        error -> JOptionPane.showMessageDialog(frame, "Error: " + error.getMessage()));
-    var temp = deepImmutableCopy(this.packClassDeps);
-    SwingUtilities.invokeLater(() -> this.updateGraph(temp));
+        dep -> {
+          updateDependency(dep, deps);
+          var packClassDepsCopy = deepImmutableCopy(this.packClassDeps);
+          var temp = analysedClassesCounter;
+          SwingUtilities.invokeLater(() -> this.updateGraph(packClassDepsCopy, temp));
+        },
+        error -> SwingUtilities.invokeLater(() ->
+          JOptionPane.showMessageDialog(frame, "Error: " + error))
+      );
   }
 
-  private void updateDependency(String dep, List<String> deps) {
+  private void updateDependency(String dep, CopyOnWriteArrayList<String> deps) {
     if (!deps.contains(dep)) {
       deps.add(dep);
     }
-//    Optional<String> depClassName = Optional.empty();
     boolean isClass = false;
-    var split = new ArrayList<>(Arrays.stream(dep.split("\\.")).toList());
-    if (Character.isUpperCase(split.get(split.size() - 1).charAt(0))) {
-//      depClassName = Optional.of(split.remove(split.size() - 1));
+    var split = new ArrayList<>(Arrays.asList(dep.split("\\.")));
+    if (!split.isEmpty() && Character.isUpperCase(split.get(split.size() - 1).charAt(0))) {
       split.remove(split.size() - 1);
       isClass = true;
     }
     String packageName = String.join(".", split);
-    if (!packClassDeps.containsKey(packageName)) {
-      packClassDeps.put(packageName, new HashMap<>());
+
+    ConcurrentHashMap<String, CopyOnWriteArrayList<String>> targetPackage =
+      packClassDeps.computeIfAbsent(packageName, k -> new ConcurrentHashMap<>());
+
+    if (isClass) {
+      targetPackage.putIfAbsent(dep, new CopyOnWriteArrayList<>());
     }
-//    depClassName.ifPresent(_ -> packClassDeps.get(packageName).put(dep, Collections.emptyList()));
-    if (isClass) packClassDeps.get(packageName).put(dep, Collections.emptyList());
-    var temp = deepImmutableCopy(this.packClassDeps);
-    SwingUtilities.invokeLater(() -> this.updateGraph(temp));
   }
 
-  private Map<String, Map<String, List<String>>> deepImmutableCopy(Map<String, Map<String, List<String>>> original) {
-    Map<String, Map<String, List<String>>> outerCopy = new HashMap<>();
-    for (Map.Entry<String, Map<String, List<String>>> outerEntry : original.entrySet()) {
-      Map<String, List<String>> innerMap = new HashMap<>();
-      for (Map.Entry<String, List<String>> innerEntry : outerEntry.getValue().entrySet()) {
-        innerMap.put(innerEntry.getKey(), Collections.unmodifiableList(new ArrayList<>(innerEntry.getValue())));
+  private Map<String, Map<String, List<String>>> deepImmutableCopy(
+    ConcurrentHashMap<String, ConcurrentHashMap<String, CopyOnWriteArrayList<String>>> original) {
+    Map<String, Map<String, List<String>>> copy = new HashMap<>();
+
+    for (Map.Entry<String, ConcurrentHashMap<String, CopyOnWriteArrayList<String>>> pkgEntry : original.entrySet()) {
+      Map<String, List<String>> classMap = new HashMap<>();
+      for (Map.Entry<String, CopyOnWriteArrayList<String>> classEntry : pkgEntry.getValue().entrySet()) {
+        classMap.put(classEntry.getKey(), List.copyOf(classEntry.getValue()));
       }
-      outerCopy.put(outerEntry.getKey(), Collections.unmodifiableMap(innerMap));
+      copy.put(pkgEntry.getKey(), Collections.unmodifiableMap(classMap));
     }
-    return Collections.unmodifiableMap(outerCopy);
+
+    return Collections.unmodifiableMap(copy);
   }
+
 
 
 }
